older commits, just getting up to date

--- a/clean_level2.ipynb
+++ b/clean_level2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#input path (level_1)\n",
-    "path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/{}/*.npy' #ernesto's copy cleaned, level_1\n",
+    "# path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/{}/*.npy' #ernesto's copy cleaned, level_1\n",
+    "path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/{}/*.npy' #ernesto's copy cleaned, level_1\n",
     "#output path (level_2)\n",
-    "out_path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/{}/'\n",
-    "out_path_df = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/dataframe/{}/'"
+    "# out_path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/{}/'\n",
+    "# out_path_df = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/dataframe/{}/'\n",
+    "out_path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_2/{}/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,18 +49,25 @@
      "output_type": "stream",
      "text": [
       "2013\n",
-      "2014\n"
+      "(1007, 1050)\n",
+      "(1001021,)\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
+     "ename": "SystemExit",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-26b9c0df7f01>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0md_\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0md\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#print(d.shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0md\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m \u001b[0;34m!=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#print(d.shape)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m#title info (i.e date)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/meganmason/Documents/projects/thesis/analysis/virtual_envs/data_analysis/lib/python3.6/site-packages/IPython/core/interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -77,8 +86,10 @@
     "\n",
     "        #loop over data\n",
     "        d_=np.load(f)\n",
-    "        d=np.squeeze(d_) #print(d.shape)\n",
-    "        d=d[d !=0] #print(d.shape)\n",
+    "        d=np.squeeze(d_) #\n",
+    "        print(d.shape)\n",
+    "        d=d[d !=0] #\n",
+    "        print(d.shape)\n",
     "\n",
     "        #title info (i.e date)\n",
     "        dt_str = f.split(\"/\")[-1] #splits on / and saves the last one\n",
@@ -86,7 +97,7 @@
     "        dt = pd.to_datetime(dt_str) #convert to datetime\n",
     "\n",
     "        out_fname = out_path.format(year) + 'arr_' + dt_str # generate output filename (appends date string)\n",
-    "\n",
+    "        sys.exit()\n",
     "#         print('output filename = ', out_fname)   \n",
     "#         np.save(out_fname, d) #saves array d #UNCOMMENT TO RE-RUN (won't seperate into year directories, fyi)\n",
     "\n",
@@ -96,68 +107,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2013\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2013/arr_20130403.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2013/arr_20130429.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2013/arr_20130503.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2013/arr_20130525.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2013/arr_20130601.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2013/arr_20130608.npy\n",
-      "done\n",
-      "2014\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2014/arr_20140323.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2014/arr_20140407.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2014/arr_20140413.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2014/arr_20140420.npy\n",
-      "/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_2/numpy/2014/arr_20140428.npy\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-5900a0e7feb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mdata_arr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#load data array (from the numpy dir)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'SD[m]'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m#         print(df)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/projects/thesis/analysis/virtual_envs/data_analysis/lib/python3.6/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    438\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    439\u001b[0m                 return format.read_array(fid, allow_pickle=allow_pickle,\n\u001b[0;32m--> 440\u001b[0;31m                                          pickle_kwargs=pickle_kwargs)\n\u001b[0m\u001b[1;32m    441\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m             \u001b[0;31m# Try a pickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/projects/thesis/analysis/virtual_envs/data_analysis/lib/python3.6/site-packages/numpy/lib/format.py\u001b[0m in \u001b[0;36mread_array\u001b[0;34m(fp, allow_pickle, pickle_kwargs)\u001b[0m\n\u001b[1;32m    702\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0misfileobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0;31m# We can use the fast fromfile() function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfromfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    706\u001b[0m             \u001b[0;31m# This is not a real file. We have to read it the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# generate pandas DataFrame \n",
-    "     # good place to quantify #nans....\n",
+    "# # generate pandas DataFrame \n",
+    "#      # good place to quantify #nans....\n",
     "    \n",
-    "# NOT FINISHED....don't really want to save it as a df csv. so will convert when I want to use Seaborn\n",
+    "# # NOT FINISHED....don't really want to save it as a df csv. so will convert when I want to use Seaborn\n",
     "\n",
-    "for year in years: #loops each year\n",
-    "    print(year)\n",
-    "    flist = glob.glob(out_path.format(year) + '/*.npy')\n",
+    "# for year in years: #loops each year\n",
+    "#     print(year)\n",
+    "#     flist = glob.glob(out_path.format(year) + '/*.npy')\n",
     "    \n",
-    "    for f in sorted(flist):\n",
-    "        print(f)\n",
+    "#     for f in sorted(flist):\n",
+    "#         print(f)\n",
     "\n",
-    "        data_arr=np.load(f) #load data array (from the numpy dir)\n",
-    "        df = pd.DataFrame(data=data_arr.flatten(), columns=['SD[m]'], dtype=np.float)\n",
-    "#         print(df)\n",
+    "#         data_arr=np.load(f) #load data array (from the numpy dir)\n",
+    "#         df = pd.DataFrame(data=data_arr.flatten(), columns=['SD[m]'], dtype=np.float)\n",
+    "# #         print(df)\n",
     "\n",
-    "        #title info (i.e date)\n",
-    "        dt_str = f.split(\"/\")[-1] #splits on / and saves the last one\n",
-    "        dt_str = \"\".join([c for c in dt_str if c.isnumeric()]) #grabs numeric values\n",
-    "        dt = pd.to_datetime(dt_str) #convert to datetime\n",
+    "#         #title info (i.e date)\n",
+    "#         dt_str = f.split(\"/\")[-1] #splits on / and saves the last one\n",
+    "#         dt_str = \"\".join([c for c in dt_str if c.isnumeric()]) #grabs numeric values\n",
+    "#         dt = pd.to_datetime(dt_str) #convert to datetime\n",
     "\n",
-    "#         out_fname = out_path_df.format(year) + 'df_' + dt_str # generate output filename (appends date string)\n",
-    "#         print('output filename = ', out_fname)\n",
-    "    print('done')\n",
+    "# #         out_fname = out_path_df.format(year) + 'df_' + dt_str # generate output filename (appends date string)\n",
+    "# #         print('output filename = ', out_fname)\n",
+    "#     print('done')\n",
     "        \n",
     "       "
    ]
