--- a/cleanit.ipynb
+++ b/cleanit.ipynb
@@ -28,9 +28,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/{}/*.tif'\n",
+    "# path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/{}/*.tif'\n",
+    "path='/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/{}/*.tif'\n",
     "shp = '/home/meganmason/Documents/projects/thesis/maps/map_layers/tuolumne_delineation/corrected_tuolumne_subbasin.shp'\n",
-    "out_path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/'"
+    "# out_path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/'\n",
+    "out_path = '/home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/'"
    ]
   },
   {
@@ -42,7 +44,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2013\n"
+      "2013\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2013/arr_20130403\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2013/arr_20130429\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2013/arr_20130503\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2013/arr_20130525\n"
      ]
     },
     {
@@ -56,62 +62,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130403\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130429\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130503\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130525\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130601\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2013/arr_20130608\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2013/arr_20130601\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2013/arr_20130608\n",
       "2014\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140323\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140407\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140413\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140420\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140428\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140502\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140511\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140517\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140527\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140531\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2014/arr_20140605\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140323\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140407\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140413\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140420\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140428\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140502\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140511\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140517\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140527\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140531\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2014/arr_20140605\n",
       "2015\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150218\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150306\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150325\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150403\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150409\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150415\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150427\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150501\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150528\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2015/arr_20150608\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150218\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150306\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150325\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150403\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150409\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150415\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150427\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150501\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150528\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2015/arr_20150608\n",
       "2016\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160326\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160407\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160416\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160426\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160509\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160527\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160607\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160613\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160620\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160625\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160701\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160708\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2016/arr_20160401\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160326\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160401\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160407\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160416\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160426\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160509\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160527\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160607\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160613\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160620\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160625\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160701\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2016/arr_20160708\n",
       "2017\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170129\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170303\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170401\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170502\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170604\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170709\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170717\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170816\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2017/arr_20170727\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170129\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170303\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170401\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170502\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170604\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170709\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170717\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170727\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2017/arr_20170816\n",
       "2018\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2018/arr_20180423\n",
-      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_3m/clean/level_1/2018/arr_20180528\n"
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2018/arr_20180423\n",
+      "output filename =  /home/meganmason/Documents/projects/thesis/data/processing_lidar/depths_50m/clean/level_1/2018/arr_20180528\n"
      ]
     }
    ],
@@ -158,7 +160,7 @@
     "        print('output filename = ', out_fname)\n",
     "        \n",
     "        ''' SAVE FILE HERE'''\n",
-    "#         np.save(out_fname, out_image)  #UNCOMMENT IF RERUNNING\n",
+    "        np.save(out_fname, out_image)  #UNCOMMENT IF RERUNNING\n",
     "            \n",
     "#             print('out filename', out_fname)\n",
     "#             print(type(out_image), out_image.shape)\n",
